# Airfield-Info-Server

./: .cursorrules  .gitignore  LICENSE  Procfile  README.md  crontab  eb-options.json  et --hard ad7600b  import_lax.py  pyproject.toml  requirements.txt  run_server.sh  tatus  test_timezone.py
.ebextensions/: 00_launch_template.config  01_launch_template.config  01_packages.config  02_environment.config  02_launch_template.config  02_python.config  03_environment.config  03_launch_template.config
.github/workflows/: deploy.yml
.platform/hooks/predeploy/: 01_setup_env.sh
.platform/nginx/: nginx.conf
.platform/nginx/conf.d/: proxy.conf
airport_info/: __init__.py  apps.py  models.py  serializers.py  views.py
airport_info/management/commands/: import_airports.py  import_timezone_aliases.py  test_airport_updates.py  test_new_airport.py  update_timezones.py
airport_info/migrations/: 0001_initial.py  0002_alter_timezone_last_updated.py  0002_initial.py  0003_airfield_timezone_last_updated_and_more.py  0003_airfield_updated_and_more.py  0004_remove_airfield_airport_inf_iata_id_bb6a46_idx_and_more.py  0005_datasource_alter_airfield_ident_and_more.py  0006_alter_airfield_type.py  0007_remove_timezone_offset_remove_timezone_uses_dst_and_more.py  0008_timezone_aliases.py
config/: production.py  settings.py  urls.py
deployment/: Dockerfile  Dockerfile.dev  Makefile  deploy.sh  docker-compose.dev.yml  docker-compose.yml
