[tool.poetry]
name = "air-field-info-server"
version = "0.1.0"
description = ""
authors = ["ViperJuice <jennertorrence@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"
requests = "^2.32.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
