[tool.poetry]
name = "air-field-info-server"
version = "0.1.0"
description = ""
authors = ["ViperJuice <jennertorrence@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
django = "~4.2.0"
djangorestframework = "~3.14.0"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
requests = "^2.31.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-storages = "^1.14.2"
boto3 = "^1.34.7"
django-redis = "^5.4.0"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
